test/spec_vectors/simd_f64x2_cmp/fail/module_15.wat
(module (func $f64x2.ne-1st-arg-empty (result v128) (f64x2.ne (v128.const f64x2 0 0))))